# govbizops

./: .dockerignore  .env.example  .gitignore  DEPLOYMENT.md  DOCKER_USAGE.md  Dockerfile  LICENSE  README.md  __init__.py  client.py  collector.py  crm_client.py  diagnose_browser.py  docker-compose.yml  docker-entrypoint.sh  example.py  main.py  pyproject.toml  requirements.txt  sam_scraper.py  setup.py  setup_playwright.py  simple_test.py  simple_viewer.py  solicitation_analyzer.py
scripts/: init_dev_db.sh  test_slack.py
src/govbizops/: __init__.py  client.py  collector.py  crm_client.py  database.py  diagnose_browser.py  main.py  sam_scraper.py  setup_playwright.py  simple_viewer.py  solicitation_analyzer.py
src/govbizops/templates/: simple_viewer.html
templates/: analysis_view.html  simple_viewer.html
tests/: conftest.py  test_client.py  test_collector.py  test_crm_client.py  test_diagnose_browser.py  test_main.py  test_sam_scraper.py  test_setup_playwright.py  test_simple_viewer.py  test_slack_script.py  test_solicitation_analyzer.py
